src/main.css
:root {
  --card-width: 14em;
  --breakpoint-xl: 1000px;
}
@font-face {
  font-family: "Beleren2016-Bold";
  src: url("fonts/Beleren2016-Bold.woff") format("woff"),
       url("fonts/Beleren2016-Bold.ttf") format("truetype"),
       url("fonts/Beleren2016-Bold.svg") format("svg");
}
*, ::after, ::before {
  box-sizing: border-box;
}
body, body > div {
  min-height: 100vh;
  padding: 0;
  margin: 0;
  font-family: "Beleren2016-Bold";
}
body > div {
  display: flex;
  flex-direction: column;
}
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: lightgrey;
  padding: 0 1rem;
}
main {
  flex-grow: 1;
  display: grid;
  grid-template-areas:
    "search"
    "commander"
    "deck"
    "info";
}
@media (min-width: 750px) {
  main {
    grid-template-areas:
      "search commander"
      "deck deck"
      "info info";
    grid-template-columns: calc(2em + var(--card-width)) 1fr;
  }
}
@media (min-width: 1000px) {
  main {
    grid-template-areas:
      "search deck commander"
      "search info info";
    grid-template-columns: calc(2em + var(--card-width)) 1fr calc(2em + var(--card-width));
    grid-template-rows: 1fr minmax(10vh, auto);
  }
}
input {
  width: 100%;
}
img {
  max-width: 100%;
}
menu {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
}
menu button {
  padding: 0.75rem 1rem;
  background-color: transparent;
  border: none;
}
menu button:hover {
  background-color: white;
  cursor: pointer;
}
#search {
  grid-area: search;
  background-color: red;
}
#search ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
#search .search-result {
  border: 1px solid black;
  font-size: 120%;
  padding: 0.2em;
}
#search .search-result div.card {
  display: none;
}
@media (hover: none) {
  #search .search-result.expanded div.card {
    display: inline-block;
  }
  #search .search-result.expanded div.card .controls {
    display: flex;
    flex-direction: row;
    position: static;
  }
}
@media (hover: hover) {
  #search .search-result:hover div.card {
    display: inline-block;
  }
  #search .search-result div.card .controls {
    display: none;
  }
}
#deck {
  grid-area: deck;
  background-color: yellow;
  display: flex;
  flex-wrap: wrap;
}
#deck div.card + div.card {
  margin-top: -120%;
}
#deck div.card:hover + div.card {
  margin-top: -5%;
}
#commanders {
  grid-area: commander;
  background-color: green;
  display: flex;
  flex-wrap: nowrap;
}
@media (min-width: 1000px) {
  #commanders {
    flex-direction: column;
  }
}
#info {
  grid-area: info;
  background-color: lightblue;
  display: flex;
  flex-direction: row;
}
#search, #deck, #commanders {
  padding: 1rem;
}
img.card {
  border-radius: 4%;
  width: var(--card-width);
}
div.card {
  position: relative;
}
div.card div.controls {
  display: none;
  position: absolute;
  top: 10%;
  right: 6%;
}
div.card:hover div.controls {
  display: flex;
}
div.card div.controls button {
  padding: 0.5em 0.8em;
  font-size: 80%;
  border: 1px solid white;
  background-color: #444;
  color: white;
  cursor: pointer;
}
div.card div.controls button:hover {
  width: auto;
}
@media (hover: hover) {
  div.card div.contrels button {
    width: 2.5em;
  }
  div.card div.controls button span {
    display: none;
  }
}
div.card div.controls button:hover span {
  display: inline;
}
.chart .W {
  fill: white;
}
.chart .U {
  fill: blue;
}
.chart .B {
  fill: black;
}
.chart .R {
  fill: red;
}
.chart .g {
  fill: green;
}
.chart .c {
  fill: gray;
}

